# Computer_Vision_Visual_Effects

./: .gitattributes  .gitignore  README.md
Homeworks/HW1/: Metadata.md
Homeworks/HW1/Image_Compositing_and_Inpainting/: poisson.py  poisson_algorithm.py  readme.md  utilities.py
Homeworks/HW1/Problem_1/: composite.py  composite_mixed.py  main.py  poisson.py  poisson_algorithm.py  utilities.py
Homeworks/HW1/Seam Carving Images/: sean_Carving.py
Homeworks/HW2/Problem_1/: green_screen_matte.py  green_screen_matte_video.py  meta.md
Homeworks/HW2/Problem_2/: README.txt  graph_cut_app.py  graph_cut_processing.py  histogram.py  image_analysis.py  image_utilities.py  requirements.txt  superpix.py
Homeworks/HW3/: problem2.py
Homeworks/HW3/2B Examples/: ipad_window_brick_wall.avi
Homeworks/HW3/Problem_2/: feature_tracking.py  problem2.py  video_output_composite_7.avi
Homeworks/HW5_Problem_1/: Default IBL.tif  dragon_3d_mesh.mdl  dragon_3d_mesh.mtl  dragon_3d_mesh.psd  dragon_3d_mesh.stl  objMesh Merged Base Color Texture.psd
Homeworks/HW5_Problem_1/PointCloud2Mesh/: CMakeLists.txt
Homeworks/HW5_Problem_1/PointCloud2Mesh/include/: pcl_wrapper.h
Homeworks/HW5_Problem_1/PointCloud2Mesh/pointcloud_files/: final_point_cloud_2019-12-02-16-42-50..stl  final_point_cloud_2019-12-02-16-42-53..stl  final_point_cloud_2019-12-02-16-46-03..stl  pumkin4.ply  pumkin5.ply  pumpkin_meshlab.mlp
Homeworks/HW5_Problem_1/PointCloud2Mesh/src/: cloud2mesh.cpp  pcl_wrapper.cpp
Term Project/: CVFX_Presentation_Notes
Term Project/Processed_Footage/: text_scene.MOV
(+137 files in other folders)
